--- a/portfolio/src/data/unbProjects.json
+++ b/portfolio/src/data/unbProjects.json
@@ -1,7 +1,7 @@
 [
   {
     "title": "Projeto UnB 1",
-    "category": "Acadêmico",
+    "category": "UnB",
     "description": "Descrição do Projeto UnB 1.",
     "images": ["upload-ai-tela-principal.png"]
   }
