--- a/portfolio/src/data/personalProjects.json
+++ b/portfolio/src/data/personalProjects.json
@@ -1,14 +1,14 @@
 [
   {
     "title": "Projeto Pessoal 1",
-    "category": "Hobby",
+    "category": "Pessoal",
     "description": "Descrição do Projeto Pessoal 1.",
-    "images": ["java-todo-list-1.jpg"]
+    "images": ["../images/java-inicilizando-projeto.jpg"]
   },
   {
     "title": "Projeto Pessoal 2",
-    "category": "Desenvolvimento Pessoal",
+    "category": "Pessoal",
     "description": "Descrição do Projeto Pessoal 2.",
-    "images": ["java-todo-list-2.jpg"]
+    "images": ["../images/java-todo-list-2.jpg"]
   }
 ]
